--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Unit3Programs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.BreezySwing.jar=T:\\Tech_Common\\Martens\\ICS4U\\BreezySwing.jar
+file.reference.TurtleGraphics.jar=T:\\Tech_Common\\Martens\\ICS4U\\TurtleGraphics.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.TurtleGraphics.jar}:\
+    ${file.reference.BreezySwing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
